--- a/index.css
+++ b/index.css
@@ -718,3 +718,26 @@ pre .constant { color: var(--codeconstant); }
    --scrollblockcolor: #CCC;
    --scrollblockhovercolor: #FFF;
 }
+
+[data-theme="oldschool"] {
+   --lightblockbgcolor: #F7F7F7;
+   --blockbgcolor: #E7E7E7;
+}
+[data-theme="oldschool"] #maincontentcontainer { /*, [data-oldschool] #rightpanecontent {*/
+   background: url("Sb-bg-tile.png");
+}
+[data-theme="oldschool"] #rightpanecontent {
+   background-position: right bottom;
+   background-repeat: no-repeat;
+   background-image: url("Sb-bg-logo.png");
+}
+
+[data-theme="oldschool"] .pageblock, [data-theme="oldschool"] .pagetitle {
+   background-color: var(--mainbgcolor);
+   padding: 0.5em 0.8em;
+   box-shadow: 2px 3px 6px 2px rgba(0,0,0,0.1); /*var(--tableoutlinecolor);*/
+}
+
+[data-theme="oldschool"] .lightblock {
+   border: 1px solid #AAA;
+}
