--- a/index.css
+++ b/index.css
@@ -129,6 +129,8 @@ pre, .uk-input, .uk-search-input, .uk-select, .uk-textarea, .uk-button-default,
 hr { border-top: 1px solid var(--tableoutlinecolor); }
 [data-mysvg] *:not([data-preserve]) { stroke: var(--maintxtcolor); }
 [data-template="piechart"]>path { fill: var(--mainbgcolor); }
+[data-template="piechart"]>circle { fill: var(--outlinecolor); } 
+/*stroke: var(--outlinecolor) !important; }*/
 
 /* UIkit reconfiguring */
 code { 
@@ -468,11 +470,11 @@ a:hover { color: inherit; }
 #discussionimageselect { margin: 3px; }
 #commenteditinfo { white-space: pre-wrap; }
 /* Content */
-.content { white-space: pre-wrap; }
+.content { white-space: pre-wrap; overflow: hidden; }
 .content ul { margin: 0.1em 0 0.4em 0; }
 .content a { text-decoration: revert; }
-.pagecontrols { margin-right: -10px !important; }
-.pagecontrol { margin: 0 3px; }
+/*.pagecontrols { margin-right: -10px !important; }*/
+.pagecontrol { margin: 0 1px; }
 /*.pagetitle { float: left; }*/
 .tableContainer table, .tableContainer td, .tableContainer th {
    border: 1px solid var(--tableoutlinecolor);
@@ -679,6 +681,8 @@ pre .constant { color: var(--codeconstant); }
 
 /* Some reaction crap or whatever it's called */
 @media (min-width: 700px) { 
+   .pagecontrol { margin: 0 3px; }
+   .pagecontrols { margin-right: -15px !important; }
    #breadcrumbs a, #breadcrumbs>*::before { font-size: 1.1em; }
    [data-messageframe] .avatar { width: 60px; height: 60px; }
 }
