--- a/index.css
+++ b/index.css
@@ -389,13 +389,17 @@ a:hover { color: inherit; }
 #discussions {
    overflow-anchor: none;
 }
+[data-messageframe] {
+   padding: 0.3em 0;
+}
 [data-messageframe] .avatar {
    margin: 0.3em;
+   margin-bottom: 0;
    width: 30px;
    height: 30px;
 }
 [data-messageframe] .messagelist {
-   padding: 0.0em 0.5em 0.5em 0.5em;
+   padding: 0.0em 0.5em 0.0em 0.5em;
 }
 [data-messageframe] .messagecontrol {
    visibility: hidden;
@@ -492,6 +496,17 @@ a:hover { color: inherit; }
    font-size: 1em;
    position: absolute;
    padding: 0.2em;
+}
+[data-template="modulemessage"] {
+   font-family: monospace;
+   padding: 0 0.5em;
+   border-left: 5px solid var(--tableoutlinecolor);
+}
+[data-template="modulemessage"]:last-child {
+   margin-bottom: 0.5em;
+}
+[data-template="modulemessage"] > *{
+   margin-right: 0.5em;
 }
 /*[data-discussionuser] {
    display: inline-block;
