--- a/index.css
+++ b/index.css
@@ -495,6 +495,7 @@ a:hover { color: inherit; }
 }
 [data-template="modulemessage"] {
    font-family: monospace;
+   white-space: pre-wrap;
    padding: 0 0.5em;
    border-left: 5px solid var(--tableoutlinecolor);
 }
